Corrects spacing on all component labels.

--- a/src/client/Dashboard/dashboard.css
+++ b/src/client/Dashboard/dashboard.css
@@ -33,7 +33,6 @@ h5 {
   grid-area: s;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .content {
